Work for #5404 - Checkboxes: Items should have limited response area - fixed items alignment in martix columns - mobile mode

--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -275,6 +275,7 @@
     display: block;
     padding-top: 0;
     padding-bottom: 0;
+    text-align: left;
   }
 
   .sd-table__cell:not(.sd-matrix__cell):not(:first-of-type) {
